# 3dbp

./: .clang-format  .gitignore  Cargo.toml  draw.py  license  readme.md  readme_zh.md  report.csv  xmake.lua
benches/: benches_result.txt  benchmark.cpp  benchmark.rs  benchmark.txt  report.cpp  report.csv  report.txt
data/: br_txt_to_json.py  demo.json
data/tests/: boxes_too_heavy.json  boxes_too_large.json  load_multi_container.json  min_value.json  min_value_no_payload.json  multi_container.json  no_packed_box.json  single_container.json
report/: report.cpp  report.csv  report.txt
sources/: algorithm.hpp  constraint.hpp  entities.hpp  input_schema.h  input_schema.json  main.cpp  tool.hpp
src/: algorithm.rs  constraint.rs  entities.rs  input_schema.json  lib.rs  main.rs  tool.rs
tests/: output_schema.json  test_constraint.cpp  test_constraint.rs  test_output.cpp  test_output.rs  test_schema.cpp
