[package]
name = "pack3d"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
jsonschema = "0.18"
schemars = "0.8"
peak_alloc = "0.3"
statistical = "1.0"

[dev-dependencies]
criterion = "0.5"
rstest = "0.11"

[[bench]]
name = "benchmark"
harness = false
