[package]
name = "pack3d"
version = "0.1.1"
edition = "2024"
default-run = "pack3d"
license = "MIT"
authors = ["Chen QingYu <chen_qingyu@qq.com>"]
description = "A 3D bin packing application written in Rust."
readme = "readme.md"
repository = "https://github.com/chen-qingyu/pack3d"
keywords = ["3d", "bin", "packing"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
log = "0.4"
colog = "1.4"
jsonschema = "0.38"
peak_alloc = "0.3"

[dev-dependencies]
criterion = "0.8"
rstest = "0.26"

[[bench]]
name = "benchmark"
harness = false
